# v3rse

./: CMakeLists.txt  README.md
dat/shaders/: default.vert.glsl
inc/: Logging.h  benchmark.h  glfw_vulkan.h  using_glm.h
lib/inc/GLFW/: glfw3.h
src/: Logging.h  Main.cpp  Main.h  main.cpp  using_std.h
src/RenderEngine/: RenderEngine.cpp  RenderEngine.h  Vertex.cpp  Vertex.h  glfw_vulkan.h
src/RenderEngine/VK/: VK.cpp  VK.h  VK_DBG.h  VK_DFL.h  VK_GLOBALS.h  VK_INI.h  VK_MEM.h  oldVK.h
